<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FirstFragment">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black">

        <ImageView
            android:id="@+id/imageBattleView"
            android:layout_width="match_parent"
            android:layout_height="260dp"
            android:background="@drawable/img"
            tools:layout_editor_absoluteX="-37dp"
            tools:layout_editor_absoluteY="0dp" />

        <ImageView
            android:id="@+id/monsterView"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginEnd="90dp"
            android:layout_marginBottom="20dp"
            android:src="@drawable/sready1"
            app:layout_constraintBottom_toBottomOf="@+id/imageBattleView"
            app:layout_constraintEnd_toEndOf="parent" />

        <ImageView
            android:id="@+id/userView"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginStart="90dp"
            android:layout_marginBottom="20dp"
            android:src="@drawable/lready1"
            app:layout_constraintBottom_toBottomOf="@+id/imageBattleView"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageView
            android:id="@+id/imageControlView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:src="@mipmap/fon1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageBattleView"
            app:layout_constraintVertical_bias="0.0" />

        <LinearLayout
            android:id="@+id/nameCreatures"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageBattleView">

            <TextView
                android:id="@+id/textViewUserName"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:fontFamily="@font/u"
                android:text="@string/textviewUser"
                android:textColor="@color/red"
                android:textSize="20sp"
                android:gravity="center"/>

            <TextView
                android:id="@+id/textViewMonsterName"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:fontFamily="@font/u"
                android:text="@string/textViewMonster"
                android:textColor="@color/red"
                android:textSize="20sp"
                android:gravity="center"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/healthCreatures"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nameCreatures">

            <ImageView
                android:id="@+id/userLifeView"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/heart"
                app:layout_constraintBottom_toBottomOf="@+id/imageBattleView"
                app:layout_constraintStart_toStartOf="parent" />
            <TextView
                android:id="@+id/textViewUserHealth"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/healthUser"
                android:textColor="@color/red"
                android:textSize="20sp"
                android:gravity="left"
                android:layout_marginTop="10dp"/>


            <TextView
                android:id="@+id/textViewMonsterHealth"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/healthMonster"
                android:textColor="@color/red"
                android:textSize="20sp"
                android:gravity="right"
                android:layout_marginTop="10dp"/>
            <ImageView
                android:id="@+id/monsterLifeView"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/heart"
                app:layout_constraintBottom_toBottomOf="@+id/imageBattleView"
                app:layout_constraintStart_toStartOf="parent" />
        </LinearLayout>



        <ImageButton
            android:id="@+id/buttonAddHealth"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/firstaid"
            app:layout_constraintStart_toStartOf="@+id/imageControlView"
            app:layout_constraintTop_toBottomOf="@+id/healthCreatures" />

        <TextView
            android:id="@+id/textViewRestoreTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textViewRestoreTime"
            android:textColor="@color/red"
            android:textSize="30sp"
            app:layout_constraintStart_toEndOf="@+id/buttonAddHealth"
            app:layout_constraintTop_toTopOf="@+id/buttonAddHealth" />


        <TextView
            android:id="@+id/textViewMessageEnd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="160dp"
            android:fontFamily="@font/u"
            android:text="@string/textViewMessageEnd"
            android:textColor="@color/red"
            android:textSize="30sp"
            android:visibility="invisible"
            app:layout_constraintBottom_toTopOf="@+id/buttonTurnKick"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/healthCreatures"
            app:layout_constraintVertical_bias="0.536" />

        <Button
            android:id="@+id/buttonTurnKick"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="150dp"
            android:backgroundTint="@color/black"
            android:fontFamily="@font/u"
            android:text="@string/buttonTurnFight"
            android:textColor="@color/red"
            app:layout_constraintBottom_toBottomOf="@+id/imageControlView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/imageControlView" />

        <Button
            android:id="@+id/buttonRestart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp"
            android:backgroundTint="@color/black"
            android:fontFamily="@font/u"
            android:text="@string/buttonRestart"
            android:textColor="@color/red"
            android:textSize="20sp"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="@+id/imageControlView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonTurnKick" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>